<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemVehicleAdd"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/vehicle_add_label"
        />
    
    <item
        android:id="@+id/itemVehicleEdit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/vehicle_edit_label"
        />
    
    <item
        android:id="@+id/itemVehicleDelete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/vehicle_delete_label"
        />
    
    <item
        android:id="@+id/itemHelp"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/menuitem_title_help"
        />
    
    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        />
    
</menu>